--- a/src/site/app/app.scss
+++ b/src/site/app/app.scss
@@ -11,7 +11,7 @@
     }
 
     &_theme_alfa-on-color {
-        background-color: var(--color-dark-indigo);
+        background-color: #233549;
     }
 
     & > * {
